<resources>
    <string name="app_name">WoW Movies</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">WoW Movies</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_watched">Watched Movies</string>
    <string name="menu_home">Home</string>
    <string name="menu_movie">Movies</string>
    <string name="menu_about">About</string>
    <string name="desc_app">Aplicativo de filmes.</string>

    <string name="tab_action">Ação</string>
    <string name="tab_fantasy">Fantasia</string>
    <string name="tab_fiction">Ficção</string>
    <string name="tab_drama">Drama</string>

    <string name="movie_image">Imagem do Filme</string>
    <string name="movie_title">Título do filme</string>
    <string name="title">Nome:</string>
    <string name="poster_path">Url:</string>
    <string name="overview">Resumo:</string>
    <string name="release_date">Lançamento: </string>
    <string name="scrolling">Mais informações</string>
    <string name="tip">P.S: Marque o Checkbox dos filmes que você já assistiu para mostra-los aqui!</string>
    <string name="didYouLikeIt">Deixe seus comentários:</string>
    <string name="description">Descrição:</string>
    <string name="save">Save</string>
    <string name="help">DICAS DE COMO UTILIZAR ESSE APP</string>

    <string name="hello">Olá, seja bem vindo!!</string>
    <string name="instructions">
        Para aproveitar bem o conteúdo desse aplicativo, sugerimos que:
        1) Abra as listas de filmes, escolha um:
         - Se assistiu: deixe comentários sobre aquele filme.
         - Se não assistiu: quer assistir, marque quero assistir o filme.
        Salve na sua área pessoal.
        2) Vá na sua área pessoal, fale um pouco sobre o filme caso tenha
        assistido (prós e contras). Aproveite!!
    </string>
    <string name="options">Options</string>

    //Tabela de erro:
    <string name="erro0">Erro desconhecido</string>
    <string name="erro1">Erro na solicitação</string>
    <string name="erro2">Erro na busca do gênero</string>
</resources>
