<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black"
            android:title="@string/menu_home" />
        <item android:title="@string/options">
            <menu>
                <item
                    android:id="@+id/navigation_movies"
                    android:icon="@drawable/ic_video_library_black_24dp"
                    android:title="@string/menu_movie" />
                <item
                    android:id="@+id/navigation_watched"
                    android:icon="@drawable/ic_movie_filter_black_24dp"
                    android:title="@string/menu_watched" />
            </menu>
        </item>
    </group>

    <item android:title="@string/scrolling">
        <menu>
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/menu_about" />
        </menu>
    </item>
</menu>
