<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_action"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabDrama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_drama"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabFantasy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_fantasy"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabFiction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_fiction"/>
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>