<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.marlena.wowmovies.scenes.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_movies"
        android:name="com.marlena.wowmovies.scenes.moviesList.MoviesListFragment"
        android:label="@string/menu_movie"
        tools:layout="@layout/fragment_movie_list" />

    <fragment
        android:id="@+id/navigation_watched"
        android:name="com.marlena.wowmovies.scenes.watchedMovies.WatchedMoviesFragment"
        android:label="@string/menu_watched"
        tools:layout="@layout/fragment_watched" />

</navigation>