<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <ImageView
        android:id="@+id/homeIMG"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_margin="40dp"
        android:background="@drawable/shape_button"
        android:src="@drawable/wow_movies_open"
        android:transitionName="image"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="40dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/helloTXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginBottom="16dp"
        android:elevation="8dp"
        android:padding="16dp"
        android:text="@string/hello"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/homeIMG" />

    <TextView
        android:id="@+id/homeTXT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:padding="16dp"
        android:text="@string/instructions"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/helloTXT" />

    <TextView
        android:id="@+id/textView_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/colorButton"
        android:elevation="5dp"
        android:padding="8dp"
        android:text="@string/help"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeTXT" />
</androidx.constraintlayout.widget.ConstraintLayout>